--- a/Style/style_section2.css
+++ b/Style/style_section2.css
@@ -25,13 +25,20 @@
     justify-content: space-around;
 }
 .cont_card{
-    width: 250px;
-    height: 700px;
+    width: 15em;
+    height: 35em;
     border: 1px solid black;
-    justify-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
     text-align: center;
     background-color: rgba(130,130,130,0.5);
+ 
+    position: relative;
 }
+
+
 .cont_card_img{
     width: 250px;
     margin: 10px;
@@ -43,10 +50,12 @@
 }
 .cont_card_text p{
     color: white;
-    font-size: 0.85em;
+    font-size: 0.8em;
+    font-weight: bold;
     margin-left: 2px;
     margin-right: 2px;
 }
+
 .cont_card_instrument{
 width: 100px;
 height: 100px;
@@ -54,6 +63,7 @@ clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
 background-color: rgb(255, 255, 255);
 justify-items: center;
 align-content: center;
+position: relative;
 
 }
 .cont_card_instrument_icon{
