--- a/Style/style_general.css
+++ b/Style/style_general.css
@@ -18,5 +18,5 @@ body{
     width: 100%;
     min-height: 100vh;
     display: grid;
-    grid-template-rows: 0.9fr 1fr 1fr;
+    grid-template-rows: auto auto auto auto;
 }
